--- a/mod/thmod/localisation/english/astral_planes_l_english.yml
+++ b/mod/thmod/localisation/english/astral_planes_l_english.yml
@@ -871,7 +871,7 @@
  job_astral_researcher_desc: "The strands of space-time contain the secrets of every dimension, including our own. These researchers work tirelessly to decipher their significance while minimizing paradoxes."
  job_astral_researcher_effect_desc: "£job_astral_researcher£ $job_astral_researcher_plural$ turn $r_consumer_goods$ into $r_research$ and $r_astral_threads$"
  mod_job_astral_researcher_add: "$job_astral_researcher$ Jobs"
- mod_job_astral_researcher_per_pop: "§G+1§! $job_astral_researcher$ Job per $VALUE$ Pops"
+ mod_job_astral_researcher_per_pop: "§G+1§! งาน $job_astral_researcher$ ต่อ $VALUE$ ประชากร"
  mod_job_astral_researcher_per_pop_short: "\n§G+1§! £mod_job_astral_researcher_add£ per $VALUE$ £pop£"
  job_astral_drone: "Astral Drone"
  job_astral_drone_plural: "Astral Drones"
@@ -880,7 +880,7 @@
  job_astral_drone_desc: "The strands of space-time contain the secrets of every dimension, including our own. These drones are tasked with deciphering their significance while minimizing paradoxes."
  job_astral_drone_effect_desc: "£job_astral_drone£ $job_astral_drone_plural$ turn $r_minerals$ into $r_research$ and $r_astral_threads$"
  mod_job_astral_drone_add: "$job_astral_drone$ Jobs"
- mod_job_astral_drone_per_pop: "§G+1§! $job_astral_drone$ Job per $VALUE$ Pops"
+ mod_job_astral_drone_per_pop: "§G+1§! งาน $job_astral_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_astral_drone_per_pop_short: "\n§G+1§! £mod_job_brain_Drone_add£ per $VALUE$ £pop£"
  job_astral_unit: "Astral Unit"
  job_astral_unit_plural: "Astral Units"
@@ -889,7 +889,7 @@
  job_astral_unit_desc: "The strands of space-time contain the secrets of every dimension, including our own. These units attempt to decipher their significance while avoiding paradoxes at all costs."
  job_astral_unit_effect_desc: "£job_astral_unit£ $job_astral_unit_plural$ turn $r_energy$ into $r_research$ and $r_astral_threads$"
  mod_job_astral_unit_add: "$job_astral_unit$ Jobs"
- mod_job_astral_unit_per_pop: "§G+1§! $job_astral_unit$ Job per $VALUE$ Pops"
+ mod_job_astral_unit_per_pop: "§G+1§! งาน $job_astral_unit$ ต่อ $VALUE$ ประชากร"
  mod_job_astral_unit_per_pop_short: "\n§G+1§! £mod_job_astral_unit_add£ per $VALUE$ £pop£"
  TUTORIAL_ASTRAL_ACTIONS_VIEW_TITLE: "Astral Actions"
  TUTORIAL_ASTRAL_ACTIONS_VIEW_DESC: "The Astral Actions screen allows us to spend our $ASTRAL_THREADS_ICON$ on various empire-wide effects. The more §SAstral Rifts§! we explore, the more actions we will unlock. Some actions are repeatable over time, while others can be used only once to unlock new abilities or technologies."
