--- a/mod/thmod/localisation/english/dip_messages_l_english.yml
+++ b/mod/thmod/localisation/english/dip_messages_l_english.yml
@@ -949,7 +949,7 @@
  01_PROPOSE_INVITE_PROPOSE:0 "We would like to propose an invite to our Federation."
  01_PROPOSE_INVITE_ACCEPT:0 "We have decided to accept your invite proposal."
  01_PROPOSE_INVITE_REFUSE:0 "We have discussed your invite proposal and have decided to refuse it."
- 01_OFFER_TRADE_DEAL_GIFT_ACCEPT_FE:0 "Very well. We accept your offer of tribute."
+ 01_OFFER_TRADE_DEAL_GIFT_ACCEPT_FE:0 "ดีมากครับ เราขอรับคำถวายความเคารพของท่าน"
  01_OFFER_TRADE_DEAL_GIFT_ACCEPT_MACHINE_FE:0 "Transfer received. The [Root.GetName] appreciates the [From.GetSpeciesName] contribution to the Custodian Project."
  01_OFFER_TRADE_DEAL_ACCEPT_FE:0 "This deal is acceptable, [From.GetSpeciesName]. We will deign to trade with you."
  01_OFFER_TRADE_DEAL_ACCEPT_MACHINE_FE:0 "Trade evaluation complete. Trade value above acceptable thresholds. Initiate transfer protocols."
@@ -965,10 +965,10 @@
  02_OFFER_TRADE_DEAL_GIFT_ACCEPT:0 "A fine gift, [From.GetSpeciesName]. You have our thanks."
  01_OFFER_TRADE_DEAL_GIFT_ACCEPT_HOSTILE:0 "This is hardly sufficient tribute, but we will take it."
  02_OFFER_TRADE_DEAL_GIFT_ACCEPT_HOSTILE:0 "We accept your gifts, but do not presume that this settles matters between us."
- 01_OFFER_TRADE_DEAL_ACCEPT:0 "Very well. The [Root.GetName] finds this offer acceptable."
- 02_OFFER_TRADE_DEAL_ACCEPT:0 "The [Root.GetName] has decided to accept your trade proposal."
- 03_OFFER_TRADE_DEAL_ACCEPT:0 "After reviewing the trade offer you sent us, [Root.GetRulerTitle] [Root.GetRulerName] has decided to accept it."
- 04_OFFER_TRADE_DEAL_ACCEPT:0 "This seems like a fair deal to us. We accept."
+ 01_OFFER_TRADE_DEAL_ACCEPT:0 "ดีมาก [Root.GetName] เห็นว่าข้อเสนอนี้เป็นที่ยอมรับได้"
+ 02_OFFER_TRADE_DEAL_ACCEPT:0 "[Root.GetName] ได้ตัดสินใจยอมรับข้อเสนอการค้าของคุณ"
+ 03_OFFER_TRADE_DEAL_ACCEPT:0 "หลังจากตรวจสอบข้อเสนอการค้าที่คุณส่งมาให้เราแล้ว [Root.GetRulerTitle] [Root.GetRulerName] ได้ตัดสินใจที่จะยอมรับข้อเสนอดังกล่าว"
+ 04_OFFER_TRADE_DEAL_ACCEPT:0 "ดูเหมือนว่านี่จะเป็นข้อตกลงที่ยุติธรรมสำหรับเรา เรายอมรับได้"
  05_OFFER_TRADE_DEAL_ACCEPT:0 "Your terms are reasonable. The [Root.GetName] accepts your trade offer."
  06_OFFER_TRADE_DEAL_ACCEPT:1 "Very well, the [Root.GetName] has decided to accept the trade deal you offered."
  07_OFFER_TRADE_DEAL_ACCEPT:0 "We know a good deal when we see one! The [Root.GetName] accepts your terms."
