--- a/mod/thmod/localisation/english/events_6_l_english.yml
+++ b/mod/thmod/localisation/english/events_6_l_english.yml
@@ -35,9 +35,9 @@
  job_turtle_miner_gestalt_desc:0 "Using powerful drills, we can harvest both the mineral shell and the  biological innards of the giant native Nemmas."
  mod_job_turtle_miner_add:0 "$job_turtle_miner$ Jobs"
  mod_job_turtle_miner_gestalt_add:0 "$job_turtle_miner_gestalt$ Jobs"
- mod_job_turtle_miner_per_pop:1 "§G+1§! $job_turtle_miner$ Job per $VALUE$ Pops"
+ mod_job_turtle_miner_per_pop:1 "§G+1§! งาน $job_turtle_miner$ ต่อ $VALUE$ ประชากร"
  mod_job_turtle_miner_per_pop_short:0 "\n§G+1§! £job_turtle_miner£ per $VALUE$ £pop£"
- mod_job_turtle_miner_gestalt_per_pop:0 "§G+1§! $job_turtle_miner_gestalt$ Job per $VALUE$ Pops"
+ mod_job_turtle_miner_gestalt_per_pop:0 "§G+1§! งาน $job_turtle_miner_gestalt$ ต่อ $VALUE$ ประชากร"
  mod_job_turtle_miner_gestalt_per_pop_short:0 "\n§G+1§! £job_turtle_miner_gestalt£ per $VALUE$ £pop£"
  LONELY_BOT_PROJECT:0 "The Factory Restoration"
  LONELY_BOT_PROJECT_DESC:0 "The factory on [Root.GetName] has been decaying for centuries already, and is reaching a point where it might fall apart at any moment. As it has played an instrumental role in the foundation of the colony on the planet, our colonists have reached out and asked us to step in and make sure the building will be restored to former glory.\n\nReward: £alloys£ §GAlloys§!"
@@ -1185,17 +1185,17 @@
  job_manufactorium_research_drone_plural:0 "Vault Research Units"
  job_manufactorium_research_drone_desc:0 "Construction, logic, worker, and security drones are cooperating to uncover the mysteries of the Vault."
  mod_job_manufactorium_research_drone_add:0 "$job_manufactorium_research_drone$ Jobs"
- mod_job_manufactorium_specialist_per_pop:0 "§G+1§! $job_manufactorium_specialist$ Job per $VALUE$ Pops"
+ mod_job_manufactorium_specialist_per_pop:0 "§G+1§! งาน $job_manufactorium_specialist$ ต่อ $VALUE$ ประชากร"
  mod_job_manufactorium_specialist_per_pop_short:0 "\n§G+1§! £job_manufactorium_specialist£ per $VALUE$ £pop£"
- mod_job_manufactorium_complex_drone_per_pop:0 "§G+1§! $job_manufactorium_complex_drone$ Job per $VALUE$ Pops"
+ mod_job_manufactorium_complex_drone_per_pop:0 "§G+1§! งาน $job_manufactorium_complex_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_manufactorium_complex_drone_per_pop_short:0 "\n§G+1§! £job_manufactorium_complex_drone£ per $VALUE$ £pop£"
- mod_job_manufactorium_scraper_per_pop:0 "§G+1§! $job_manufactorium_scraper$ Job per $VALUE$ Pops"
+ mod_job_manufactorium_scraper_per_pop:0 "§G+1§! งาน $job_manufactorium_scraper$ ต่อ $VALUE$ ประชากร"
  mod_job_manufactorium_scraper_per_pop_short:0 "\n§G+1§! £job_manufactorium_scraper£ per $VALUE$ £pop£"
- mod_job_manufactorium_scraper_drone_per_pop:0 "§G+1§! $job_manufactorium_scraper_drone$ Job per $VALUE$ Pops"
+ mod_job_manufactorium_scraper_drone_per_pop:0 "§G+1§! งาน $job_manufactorium_scraper_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_manufactorium_scraper_drone_per_pop_short:0 "\n§G+1§! £job_manufactorium_scraper_drone£ per $VALUE$ £pop£"
- mod_job_manufactorium_research_drone_per_pop:0 "§G+1§! $job_manufactorium_research_drone$ Job per $VALUE$ Pops"
+ mod_job_manufactorium_research_drone_per_pop:0 "§G+1§! งาน $job_manufactorium_research_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_manufactorium_research_drone_per_pop_short:0 "\n§G+1§! £job_manufactorium_research_drone£ per $VALUE$ £pop£"
- mod_job_manufactorium_researcher_per_pop:0 "§G+1§! $job_manufactorium_researcher$ Job per $VALUE$ Pops"
+ mod_job_manufactorium_researcher_per_pop:0 "§G+1§! งาน $job_manufactorium_researcher$ ต่อ $VALUE$ ประชากร"
  mod_job_manufactorium_researcher_per_pop_short:0 "\n§G+1§! £job_manufactorium_researcher£ per $VALUE$ £pop£"
  INTEMPORAL_ORB_CAT:0 "The Orb"
  INTEMPORAL_ORB_CAT_DESC:0 "We have discovered powerful concentrated energy in the form of an orb. Investigation is advised."
@@ -1294,13 +1294,13 @@
  job_stasis_warden_plural:0 "Stasis Wardens"
  job_stasis_warden_desc:0 "Wardens maintain the stasis prison, along with marking citizens for disappearance."
  mod_job_stasis_warden_add:0 "$job_stasis_warden$ Jobs"
- mod_job_stasis_warden_per_pop:0 "§G+1§! $job_stasis_warden$ Job per $VALUE$ Pops"
+ mod_job_stasis_warden_per_pop:0 "§G+1§! งาน $job_stasis_warden$ ต่อ $VALUE$ ประชากร"
  mod_job_stasis_warden_per_pop_short:0 "\n§G+1§! £job_researcher£ per $VALUE$ £pop£"
  job_stasis_warden_drone:0 "Stasis Warden Drone"
  job_stasis_warden_drone_plural:0 "Stasis Warden Drones"
  job_stasis_warden_drone_desc:0 "Warden drones maintain the stasis prison, along with marking deviants for disappearance."
  mod_job_stasis_warden_drone_add:0 "$job_stasis_warden_drone$ Jobs"
- mod_job_stasis_warden_drone_per_pop:0 "§G+1§! $job_stasis_warden_drone$ Job per $VALUE$ Pops"
+ mod_job_stasis_warden_drone_per_pop:0 "§G+1§! งาน $job_stasis_warden_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_stasis_warden_drone_per_pop_short:0 "\n§G+1§! £job_researcher£ per $VALUE$ £pop£"
  colony.9310.name: "Junkyard Orbit"
  colony.9310.desc: "The latest report from [planet.GetName] informs us that we have miscalculated the planet's waste management capabilities. Massive dumpsites have merged to form a single, impassable wasteland, one that stretches to the very edge of the planet's population centers.\n\nThe locals have begun to deploy large shipments of garbage into orbit, but only as a 'temporary measure.'"
@@ -1366,13 +1366,13 @@
  job_myrmeku_power_farmer_plural: "Myrmeku Power Farmer"
  job_myrmeku_power_farmer_desc: "Technicians that harness energy from Myrmeku colonies."
  mod_job_myrmeku_power_farmer_add: "$job_myrmeku_power_farmer$ Jobs"
- mod_job_myrmeku_power_farmer_per_pop: "§G+1§! $job_myrmeku_power_farmer$ Job per $VALUE$ Pops"
+ mod_job_myrmeku_power_farmer_per_pop: "§G+1§! งาน $job_myrmeku_power_farmer$ ต่อ $VALUE$ ประชากร"
  mod_job_myrmeku_power_farmer_per_pop_short: "\n§G+1§! £job_technician£ per $VALUE$ £pop£"
  job_myrmeku_power_farmer_gestalt: "Myrmeku Power Drone"
  job_myrmeku_power_farmer_gestalt_plural: "Myrmeku Power Drones"
  job_myrmeku_power_farmer_gestalt_desc: "Tech-Drones that harness energy from Myrmeku colonies."
  mod_job_myrmeku_power_farmer_gestalt_add: "$job_myrmeku_power_farmer_gestalt$ Jobs"
- mod_job_myrmeku_power_farmer_gestalt_per_pop: "§G+1§! $job_myrmeku_power_farmer_gestalt$ Job per $VALUE$ Pops"
+ mod_job_myrmeku_power_farmer_gestalt_per_pop: "§G+1§! งาน $job_myrmeku_power_farmer_gestalt$ ต่อ $VALUE$ ประชากร"
  mod_job_myrmeku_power_farmer_gestalt_per_pop_short: "\n§G+1§! £job_technician_drone£ per $VALUE$ £pop£"
  planet_myrmeku_attacks: "Myrmeku Attacks"
  planet_myrmeku_attacks_desc: "[Owner.GetColonistPluralCapital] have been attacked by tiny insects."
@@ -1484,19 +1484,19 @@
  job_mineral_diver_plural: "Deep Sea Divers"
  job_mineral_diver_desc: "Deep sea experts who recover sunken minerals from the ocean depths."
  job_mineral_diver_add: "$job_mineral_diver$ Jobs"
- job_mineral_diver_per_pop: "§G+1§! $job_mineral_diver$ Job per $VALUE$ Pops"
+ job_mineral_diver_per_pop: "§G+1§! งาน $job_mineral_diver$ ต่อ $VALUE$ ประชากร"
  job_mineral_diver_per_pop_short: "\n§G+1§! £job_miner£ per $VALUE$ £pop£"
  mod_job_mineral_diver_add: "$job_mineral_diver$ Jobs"
- mod_job_mineral_diver_per_pop: "§G+1§! $job_mineral_diver$ Job per $VALUE$ Pops"
+ mod_job_mineral_diver_per_pop: "§G+1§! งาน $job_mineral_diver$ ต่อ $VALUE$ ประชากร"
  mod_job_mineral_diver_per_pop_short: "\n§G+1§! £job_miner£ per $VALUE$ £pop£"
  job_mineral_diver_drone: "Underwater Drone"
  job_mineral_diver_drone_plural: "Underwater Drones"
  job_mineral_diver_drone_desc: "Mining Drones that can withstand great pressure to collect sunken minerals from the ocean depths."
  mod_job_mineral_diver_drone_add: "$job_mineral_diver_drone$ Jobs"
- mod_job_mineral_diver_drone_per_pop: "§G+1§! $job_mineral_diver_drone$ Job per $VALUE$ Pops"
+ mod_job_mineral_diver_drone_per_pop: "§G+1§! งาน $job_mineral_diver_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_mineral_diver_drone_per_pop_short: "\n§G+1§! £job_mining_drone£ per $VALUE$ £pop£"
  job_mineral_diver_drone_add: "$job_mineral_diver_drone$ Jobs"
- job_mineral_diver_drone_per_pop: "§G+1§! $job_mineral_diver_drone$ Job per $VALUE$ Pops"
+ job_mineral_diver_drone_per_pop: "§G+1§! งาน $job_mineral_diver_drone$ ต่อ $VALUE$ ประชากร"
  job_mineral_diver_drone_per_pop_short: "\n§G+1§! £job_mining_drone£ per $VALUE$ £pop£"
  RAPID_DESERTIFICATION_CAT: "Rapid Desertification"
  RAPID_DESERTIFICATION_CAT_DESC: "Aerial images taken of [From.Planet.GetName]'s rapidly diminishing vegetation could indicate the presence of an unidentified life form habiting its surface."
@@ -1550,9 +1550,9 @@
  job_alien_hunter_plural: "Alien Hunters"
  job_alien_hunter_desc: "A special task force assigned to hunt alien fauna."
  job_alien_hunter_add: "$job_alien_hunter$ Jobs"
- job_alien_hunter_per_pop: "§G+1§! $job_alien_hunter$ Job per $VALUE$ Pops"
+ job_alien_hunter_per_pop: "§G+1§! งาน $job_alien_hunter$ ต่อ $VALUE$ ประชากร"
  mod_job_alien_hunter_add: "$job_alien_hunter$ Jobs"
- mod_job_alien_hunter_per_pop: "§G+1§! $job_alien_hunter$ Job per $VALUE$ Pops"
+ mod_job_alien_hunter_per_pop: "§G+1§! งาน $job_alien_hunter$ ต่อ $VALUE$ ประชากร"
  mod_job_alien_hunter_per_pop_short: "\n§G+1§! £job_alien_hunter£ per $VALUE$ £pop£"
  d_desertling_infestation: "Invasive Fauna"
  d_desertling_infestation_desc: "An invasive species of alien mammals."
