--- a/mod/thmod/localisation/english/machine_age_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_l_english.yml
@@ -557,7 +557,7 @@
  job_haruspex_with_icon: "£job_haruspex£ $job_haruspex$"
  job_haruspex_plural_with_icon: "£job_haruspex£ $job_haruspex_plural$"
  mod_job_haruspex_add: "$job_haruspex$ Jobs"
- mod_job_haruspex_per_pop: "§G+1§! $job_haruspex$ Job per $VALUE$ Pops"
+ mod_job_haruspex_per_pop: "§G+1§! งาน $job_haruspex$ ต่อ $VALUE$ ประชากร"
  mod_job_haruspex_per_pop_short: "\n§G+1§! £mod_job_haruspex_add£ per $VALUE$ £pop£"
  job_technophant: "Technophant"
  job_technophant_plural: "Technophants"
@@ -567,7 +567,7 @@
  job_technophant_with_icon: "£job_technophant£ $job_technophant$"
  job_technophant_plural_with_icon: "£job_technophant£ $job_technophant_plural$"
  mod_job_technophant_add: "$job_technophant$ Jobs"
- mod_job_technophant_per_pop: "§G+1§! $job_technophant$ Job per $VALUE$ Pops"
+ mod_job_technophant_per_pop: "§G+1§! งาน $job_technophant$ ต่อ $VALUE$ ประชากร"
  mod_job_technophant_per_pop_short: "\n§G+1§! £mod_job_technophant_add£ per $VALUE$ £pop£"
  job_needs_cybrog_traits: "§TThis £job£ §YJob§! requires the £pop£ §YPop§! to have the §YRitualistic Implants of any Cybernetic Creed§! or §Y$trait_cybernetic$§! trait.§!"
  trait_cyborg_creed_of_construction: "Augmentations of the Fellowship"
