--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -814,7 +814,7 @@
  job_gestation_drone_desc:0 "Designed to nurture, these specialized drones oversee the growth of young biologicals, preparing them to become integral cybernetic contributors to the collective."
  job_gestation_drone_effect_desc:0 "£job_gestation_drone£ $job_gestation_drone_plural$ turn $r_alloys$ and $r_food$ (or $r_minerals$) into $r_society$, $r_engineering$, £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§! and empire-wide £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!."
  mod_job_gestation_drone_add:0 "$job_gestation_drone$ Jobs"
- mod_job_gestation_drone_per_pop:0 "§G+1§! $job_gestation_drone$ Job per $VALUE$ Pops"
+ mod_job_gestation_drone_per_pop:0 "§G+1§! งาน $job_gestation_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_gestation_drone_per_pop_short:0 "\n§G+1§! £mod_job_gestation_drone_add£ per $VALUE$ £pop£"
  job_synapse_drone:0 "โดรนไซแน็ป"
  job_synapse_drone_plural:0 "โดรนไซแน็ป"
@@ -990,14 +990,14 @@
  job_warden_desc: "Overseeing an entire penal planet as its warden demands individuals who are highly skilled and wholly committed to the task at hand."
  job_warden_effect_desc:0 "£job_warden£ $job_warden_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £stability£ §Y$PLANET_STABILITY_TITLE$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!"
  mod_job_warden_add: "$job_warden$ Jobs"
- mod_job_warden_per_pop: "§G+1§! $job_warden$ Job per $VALUE$ Pops"
+ mod_job_warden_per_pop: "§G+1§! งาน $job_warden$ ต่อ $VALUE$ ประชากร"
  mod_job_warden_per_pop_short: "\n§G+1§! £mod_job_warden_add£ per $VALUE$ £pop£"
  job_foundry_prison_worker: "Penal Metallurgist"
  job_foundry_prison_worker_plural: "Penal Metallurgists"
  job_foundry_prison_worker_desc: "Trained prisoners are used to turn raw minerals into durable alloys used in various advanced construction."
  job_foundry_prison_worker_effect_desc: "£job_foundry_prison_worker£ $job_foundry_prison_worker_plural$ turn £minerals£ §Y$minerals$§! into £alloys£ §Y$alloys$§!"
  mod_job_foundry_prison_worker_add: "$job_foundry_prison_worker$ Jobs"
- mod_job_foundry_prison_worker_per_pop: "§G+1§! $job_foundry_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_foundry_prison_worker_per_pop: "§G+1§! งาน $job_foundry_prison_worker$ ต่อ $VALUE$ ประชากร"
  mod_job_foundry_prison_worker_per_pop_short: "\n§G+1§! £mod_job_foundry_prison_worker_add£ per $VALUE$ £pop£"
  job_artisan_prison_worker: "Penal Artisan"
  job_artisan_prison_worker_plural: "Penal Artisans"
@@ -1005,14 +1005,14 @@
  job_artisan_prison_worker_desc: "These trained prisoners manufacture domestic and luxury goods of various types."
  job_artisan_prison_worker_effect_desc: "£job_artisan_prison_worker£ $job_artisan_prison_worker_plural$ turn £minerals£ §Y$minerals$§! into £consumer_goods£ §Y$consumer_goods$§!"
  mod_job_artisan_prison_worker_add: "$job_artisan_prison_worker$ Jobs"
- mod_job_artisan_prison_worker_per_pop: "§G+1§! $job_artisan_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_artisan_prison_worker_per_pop: "§G+1§! งาน $job_artisan_prison_worker$ ต่อ $VALUE$ ประชากร"
  mod_job_artisan_prison_worker_per_pop_short: "\n§G+1§! £mod_job_artisan_prison_worker_add£ per $VALUE$ £pop£"
  job_catalytic_technician_prison_worker: "Penal Catalytic Technician"
  job_catalytic_technician_prison_worker_plural: "PenalCatalytic Technicians"
  job_catalytic_technician_prison_worker_desc: "These trained prisoners turn raw organic matter into durable alloys for advanced construction."
  job_catalytic_technician_prison_worker_effect_desc: "£job_catalytic_technician_prison_worker£ $job_catalytic_technician_prison_worker_plural$ turn £food£ §Y$food$§! into £alloys£ §Y$alloys$§!"
  mod_job_catalytic_technician_prison_worker_add: "$job_catalytic_technician_prison_worker$ Jobs"
- mod_job_catalytic_technician_prison_worker_per_pop: "§G+1§! $job_catalytic_technician_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_catalytic_technician_prison_worker_per_pop: "§G+1§! งาน $job_catalytic_technician_prison_worker$ ต่อ $VALUE$ ประชากร"
  mod_job_catalytic_technician_prison_worker_per_pop_short: "\n§G+1§! £mod_job_catalytic_technician_prison_worker_add£ per $VALUE$ £pop£"
  job_artificer_prison_worker: "Penal Artificer"
  job_artificer_prison_worker_plural: "Penal Artificers"
@@ -1020,7 +1020,7 @@
  job_artificer_prison_worker_desc: "Skilled prisoners that manufacture domestic and luxury goods of stunning quality."
  job_artificer_prison_worker_effect_desc: "£job_artificer£ $job_artificer_plural$ turn £minerals£ §Y$minerals$§! into £consumer_goods£ §Y$consumer_goods$§! and £mod_trade_value_add£ §Y$TRADE_VALUE$§!"
  mod_job_artificer_prison_worker_add: "$job_artificer_prison_worker$ Jobs"
- mod_job_artificer_prison_worker_per_pop: "§G+1§! $job_artificer_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_artificer_prison_worker_per_pop: "§G+1§! งาน $job_artificer_prison_worker$ ต่อ $VALUE$ ประชากร"
  mod_job_artificer_prison_worker_per_pop_short: "\n§G+1§! £mod_job_artificer_prison_worker_add£ per $VALUE$ £pop£"
  job_battle_thrall: "ทาสสงคราม"
  job_battle_thrall_plural: "ทาสสงคราม"
@@ -1028,7 +1028,7 @@
  job_battle_thrall_desc: "Elite slave warriors, trained from birth, who fight with unparalleled zeal and ferocity. Their loyalty and dedication make them formidable on the front lines."
  job_battle_thrall_effect_desc: "£job_battle_thrall£ $job_battle_thrall_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawn £defense_army£ §YDefense Armies§! and improve empire wide §Y$MOD_ARMY_ATTACK_DAMAGE_MULT$§!."
  mod_job_battle_thrall_add: "งาน $job_battle_thrall$"
- mod_job_battle_thrall_per_pop: "§G+1§! $job_battle_thrall$ Job per $VALUE$ Pops"
+ mod_job_battle_thrall_per_pop: "§G+1§! งาน $job_battle_thrall$ ต่อ $VALUE$ ประชากร"
  mod_job_battle_thrall_per_pop_short: "\n§G+1§! £mod_job_battle_thrall_add£ ต่อ $VALUE$ £pop£"
  job_trader: "นักเทรด"
  job_trader_with_icon: "£job_trader£ $job_trader$"
@@ -1047,7 +1047,7 @@
  job_numistic_priest_desc: "These zealous facilitators of commerce have vowed to squeeze every last drop of value from deals carried out in Numa's name."
  job_numistic_priest_effect_desc: "$job_numistic_priest_plural_with_icon$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$, $r_trade_value$, และ $r_amenities$"
  mod_job_numistic_priest_add: "$job_numistic_priest$ Jobs"
- mod_job_numistic_priest_per_pop: "§G+1§! $job_numistic_priest$ Job per $VALUE$ Pops"
+ mod_job_numistic_priest_per_pop: "§G+1§! งาน $job_numistic_priest$ ต่อ $VALUE$ ประชากร"
  mod_job_numistic_priest_per_pop_short: "\n§G+1§! £mod_job_numistic_priest_add£ per $VALUE$ £pop£"
  job_foundry:0 "นักโลหะวิทยา"
  job_foundry_plural:0 "นักโลหะวิทยา"
@@ -1241,7 +1241,7 @@
  job_unifier_desc:0 "The administrative corps of our newly unified planet, these officers ensure that amenities are delivered to those in need."
  job_unifier_effect_desc:0 "£job_unifier£ $job_unifier_plural$ เปลี่ยน $r_consumer_goods$ และ $r_food$ (หรือ $r_minerals$) เป็น $r_unity$ และ $r_amenities$"
  mod_job_unifier_add:0 "$job_unifier$ Jobs"
- mod_job_unifier_per_pop:0 "§G+1§! $job_unifier$ Job per $VALUE$ Pops"
+ mod_job_unifier_per_pop:0 "§G+1§! งาน $job_unifier$ ต่อ $VALUE$ ประชากร"
  mod_job_unifier_per_pop_short:0 "\n§G+1§! £mod_job_unifier_add£ per $VALUE$ £pop£"
  job_ranger:0 "เจ้าหน้าที่ดูแลป่า"
  job_ranger_plural:0 "เจ้าหน้าที่ดูแลป่า"
@@ -1337,21 +1337,21 @@
  job_criminal_plural:0 "อาชญากร"
  job_criminal_desc:1 "These criminals live outside the bounds of legal society, some by choice and some by circumstance."
  mod_job_criminal_add:0 "งาน $job_criminal$"
- mod_job_criminal_per_crime:0 "§R+1§! $job_criminal$ Job per $VALUE$ Planet £crime£ §YCrime§!"
+ mod_job_criminal_per_crime:0 "§R+1§! งาน $job_criminal$ ต่อ $VALUE$ ดาวเคราะห์ £crime£ §Yอาชญากรรม§!"
  mod_job_criminal_per_crime_short:0 "\n§R+1§! £mod_job_criminal_add£ per $VALUE$ £crime£"
- mod_job_criminal_per_pop: "§R+1§! $job_criminal$ Job per $VALUE$ Planet £pop£ §YPops§!"
+ mod_job_criminal_per_pop: "§R+1§! งาน $job_criminal$ ต่อ $VALUE$ ดาวเคราะห์ £pop£ §Yประชากร§!"
  mod_job_criminal_per_pop_short: "\n§R+1§! £mod_job_criminal_add£ per $VALUE$ £pop£"
  job_deviant_drone:0 "โดรนผิดปกติ"
  job_deviant_drone_plural:0 "โดรนผิดปกติ"
  job_deviant_drone_desc:0 "These deviants no longer obey the Hive Mind."
  mod_job_deviant_drone_add:0 "งาน $job_deviant_drone$"
- mod_job_deviant_drone_per_crime:0 "§R+1§! $job_deviant_drone$ Job per $VALUE$ Planet £crime£ §YCrime§!"
+ mod_job_deviant_drone_per_crime:0 "§R+1§! งาน $job_deviant_drone$ ต่อ $VALUE$ ดาวเคราะห์ £crime£ §Yอาชญากรรม§!"
  mod_job_deviant_drone_per_crime_short:0 "\n§R+1§! £mod_job_deviant_drone_add£ per $VALUE$ £crime£"
  job_corrupt_drone:0 "โดรนเสื่อม"
  job_corrupt_drone_plural:0 "โดรนเสื่อม"
  job_corrupt_drone_desc:0 "โดรนเหล่านี้ได้รับความเสียหายและไม่เชื่อฟังคําสั่งของหน่วยข่าวกรองหลักอีกต่อไป"
  mod_job_corrupt_drone_add:0 "งาน $job_corrupt_drone$"
- mod_job_corrupt_drone_per_crime:1 "§R+1§! $job_corrupt_drone$ Job per $VALUE$ Planet £crime£ §YCrime§!"
+ mod_job_corrupt_drone_per_crime:1 "§R+1§! งาน $job_corrupt_drone$ ต่อ $VALUE$ ดาวเคราะห์ £crime£ §Yอาชญากรรม§!"
  mod_job_corrupt_drone_per_crime_short:1 "\n§R+1§! £mod_job_corrupt_drone_add£ per $VALUE$ £crime£"
  job_hunter_gatherer:0 "คนเก็บของป่าล่าสัตว์"
  job_hunter_gatherer_plural:0 "คนเก็บของป่าล่าสัตว์"
@@ -1774,7 +1774,7 @@
  MOD_COUNTRY_ADMIN_CAP_ADD:1 "ความสามารถในการบริหาร"
  MOD_COUNTRY_ADMIN_CAP_MULT:0 "$MOD_COUNTRY_ADMIN_CAP_ADD$"
  mod_diplomacy_upkeep_mult:2 "ค่าบำรุงรักษาข้อตกลงทางการทูต"
- mod_diplomacy_influence_upkeep_mult:0 "Diplomatic Agreement Influence Upkeep"
+ mod_diplomacy_influence_upkeep_mult:0 "อิทธิพลที่ใช้เป็นค่าบำรุงรักษาต่อข้อตกลงทางการทูต"
  mod_pop_factions_influence_produces_mult:0 "ได้รับอิทธิพลจากกลุ่มการเมือง"
  mod_pop_factions_influence_produces_add:0 "$mod_pop_factions_influence_produces_mult$"
  criminal_gambling:0 "Problematic Gambling"
@@ -1972,7 +1972,7 @@
  building_nuumismatic_shrine_desc:1 "ศาลเจ้าที่บูชา นูมา เทพีแห่งโชคลาภ"
  building_ranger_lodge:0 "บ้านพักเรนเจอร์"
  building_ranger_lodge_desc:0 "The first step to live more in tune with nature is to ensure that nature is still around. Making sure none of the colonists impact the natural beauty is essential. The world must remain pure."
- building_ranger_lodge_effect: "£job_ranger£ $job_ranger$ Jobs from Naturally Occuring Blockers: §G+1§! £job_ranger£"
+ building_ranger_lodge_effect: "งาน £job_ranger£ $job_ranger$ จากสิ่งกีดขวางที่เกิดขึ้นตามธรรมชาติ: §G+1§! £job_ranger£"
  mod_building_xeno_zoo_max:0 "$building_xeno_zoo$สูงสุด"
  mod_building_crystal_mines_max:0 "$building_crystal_mines$สูงสุด"
  mod_building_mote_harvesters_max:0 "$building_mote_harvesters$สูงสุด"
@@ -2072,7 +2072,7 @@
  d_rich_mountain_desc:1 "These mountainsides glint with rich ore resources and precious stones."
  d_crystal_reef:0 "ปะการังคริสตัล"
  d_crystal_reef_desc:1 "Crystal lattices glimmer amongst the rocks and corals of this sandy reef."
- d_prosperous_mesa:0 "Prosperous Mesa"
+ d_prosperous_mesa:0 "ภูเขายอดราบเต็มไปด้วยทรัพยากร"
  d_prosperous_mesa_desc:1 "This flat-topped hill has steep sides lined with useful resources."
  d_crystalline_caverns:0 "ถ้ำคริสตัลลีน"
  d_crystalline_caverns_desc:1 "Like enormous geodes, these caves are filled on all sides with rare crystals."
@@ -2088,9 +2088,9 @@
  d_forgiving_tundra_desc:1 "Sedges, shrubs and lichens cover this high-latitude biome, where the subsoil permafrost is nevertheless covered in more fertile sediment."
  d_rugged_woods:0 "ป่าหินที่หนาวเย็น"
  d_rugged_woods_desc:1 "Cold, rocky woods with herbaceous understories."
- d_boggy_fens:0 "Boggy Fens"
+ d_boggy_fens:0 "หนองบึง"
  d_boggy_fens_desc:1 "These low-lying wetlands provide a wealth of plant nutrients."
- d_lush_jungle:0 "Lush Jungle"
+ d_lush_jungle:0 "ป่าเขียวชอุ่ม"
  d_lush_jungle_desc:1 "With a dense canopy and nigh-impenetrable vegetation density, these jungles are poor in soil quality, but rich in plant life and fruit-bearing trees."
  d_lichen_fields:0 "ทุ่งไลเคน"
  d_lichen_fields_desc:1 "Dewy moss, lichens and fungi form a plush carpet that stretches across these rocky lands."
@@ -2098,13 +2098,13 @@
  d_fungal_caves_desc:1 "These extensive cave networks are covered in many species of edible fungi, which require neither sunlight nor fertile soil to flourish."
  d_fungal_forest:0 "ป่าเชื้อรา,เห็ด"
  d_fungal_forest_desc:1 "In lieu of trees, towering mushrooms dominate these fecund forests, the enormous caps of fungal giants blotting out sunlight to create the perfect environment for a rich variety of smaller specimens."
- d_fertile_lands:0 "Fertile Lands"
+ d_fertile_lands:0 "ดินแดนอุดมสมบูรณ์"
  d_fertile_lands_desc:1 "This vast stretch of open plains provides ideal farmland."
- d_marvelous_oasis:0 "Marvelous Oasis"
+ d_marvelous_oasis:0 "โอเอซิสอันมหัศจรรย์"
  d_marvelous_oasis_desc:1 "A shimmering jewel of water and greenery in a barren wasteland."
- d_great_river:0 "Great River"
+ d_great_river:0 "แม่น้ำใหญ่"
  d_great_river_desc:1 "A slow-flowing river of enormous volume provides water and vegetation for a rich abundance of life."
- d_black_soil:0 "Black Soil"
+ d_black_soil:0 "ดินดำอุดมไปด้วยอินทรียวัตถุ"
  d_black_soil_desc:1 "With a remarkably high moisture capacity and high amounts of chemicals integral to plant life, these soils promise impressive agricultural yields."
  d_teeming_reef:0 "เต็มไปด้วยแนวปะการัง"
  d_teeming_reef_desc:1 "A vibrant ecosystem brimming with corals, fish, mollusks, mammals, invertebrates, and all kinds of edible marine life."
@@ -2112,7 +2112,7 @@
  d_tropical_island_desc:1 "From fruit-laden trees to plentiful fauna, the bounties of this paradisaical island promise a rich harvest."
  d_metal_boneyard:0 "Metal Boneyards"
  d_metal_boneyard_desc:1 "The hollowed-out metal skeletons of fallen infrastructure seem almost to groan as the wind whistles through them."
- d_organic_landfill:0 "Organic Landfills"
+ d_organic_landfill:0 "หลุมฝังกลบอินทรีย์"
  d_organic_landfill_desc:1 "Toxic biohazard waste rots and fumes in vast heaps under the sun."
  d_betharian_deposit:0 "ทุ่งบีธาเรียน"
  d_betharian_deposit_desc:1 "Thousands upon thousands of valuable Betharian stones glint like stars in these fields."
@@ -2477,12 +2477,12 @@
  decision_divine_algorithm_desc:0 "The local drive on this hub is running Numa's Divine Algorithm add-on for improved energy production planetwide."
  divine_algorithm:0 "Divine Algorithm"
  divine_algorithm_desc:0 "Numa's divine algorithm is currently active on this world."
- decision_discourage_growth:0 "กีดกันการเติบโตของดาวเคราะห์"
+ decision_discourage_growth:0 "กีดกันการเพิ่มประชากรในดาวเคราะห์"
  decision_discourage_growth_desc:1 "If resources and living space are at a premium, population planning might be necessary on this world. Measures will then be taken to voluntarily curtail population growth."
  decision_discourage_growth_effects_short:0 "ลด £pop£ ประชากรในดาวเคราะห์\n\nเพิ่ม §Rค่าบำรุงรักษาประชากร§! ขณะใช้งาน"
- planet_growth_discouraged:0 "Growth Discouraged"
+ planet_growth_discouraged:0 "กีดกันการเพิ่มประชากร"
  planet_growth_discouraged_desc:1 "This world has implemented several measures designed to discourage population growth."
- decision_end_discourage_growth:0 "End Growth Discouragement"
+ decision_end_discourage_growth:0 "หยุดกีดกันการเพิ่มประชากร"
  decision_end_discourage_growth_desc:1 "This will remove the political measures that were taken on this world to discourage population growth."
  decision_end_discourage_growth_effects_short:0 "£pop£ ประชากรบนดาวสามารถเพิ่มได้ตามปกติ\n\nลด §Gค่าบำรุงรักษาประชากร§!"
  decision_consecrated_worlds:1 "ดาวศักดิ์สิทธิ์"
@@ -2649,7 +2649,7 @@
  leader_scientists:0 "นักวิทยาศาสตร์"
  leader_governors:0 "ผู้ว่าการ"
  leader_officials: "เจ้าหน้าที่"
- subject_integration:0 "การให้บริวารเข้ามารวมกับเรา"
+ subject_integration:0 "การให้บริวารเข้ามาผนวกรวมกับเรา"
  pc_city:0 "ดาวอภิมหานคร"
  pc_city_desc:0 "World completely engulfed by urban-industrial sprawl. Its natural lithosphere is no longer discernible from orbit."
  trait_pc_city_preference:1 "ชอบอยู่ศัยในดาวอภิมหานคร"
