--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -1271,8 +1271,8 @@
  weak_magnetic_field_desc:1 "Although habitable, this world has a weak magnetic field that offers little protection against cosmic radiation."
  unstable_tectonics:0 "เปลือกโลกที่ไม่เสถียร"
  unstable_tectonics_desc:0 "This world has very unstable plate tectonics and is prone to massive earthquakes and volcanic activity."
- tidal_locked:0 "Tidal Locked"
- tidal_locked_desc:0 "This world is tidally locked around its star, meaning that one side always has daylight while the other is locked in eternal darkness. If life exists here, it is likely limited to the twilight regions where the two sides meet."
+ tidal_locked:0 "ถูกตรึงโดยแรงไทดัล"
+ tidal_locked_desc:0 "ดาวนี้ถูกผูกติดกับดาวอีกดวงโดยแรงไทดัลที่ทำต่อกัน ซึ่งหมายความว่าด้านหนึ่งจะมีแสงสว่างตลอดเวลา ในขณะที่อีกด้านหนึ่งจะมืดมิดชั่วนิรันดร์ หากสิ่งมีชีวิตมีอยู่ที่นี่จริง สิ่งมีชีวิตก็อาจจำกัดอยู่เฉพาะในบริเวณที่ทั้งสองฝั่งมาบรรจบกัน"
  chthonian_planet:0 "Chthonian Planet"
  chthonian_planet_desc:0 "This planet was once a gas giant, but its proximity to its star has burned away the thick atmosphere. All that remains now is a super-dense and mineral rich metallic core."
  brown_dwarf:0 "ดาวแคระน้ำตาล"
