--- a/mod/thmod/localisation/english/modifiers_utopia_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_utopia_l_english.yml
@@ -42,10 +42,10 @@
  slave_hunger_strike:0 "Hunger Strike"
  slave_hunger_strike_desc:0 "It's hard to work when you're doubled over from hunger pangs."
  revolt_suppressed:0 "การก่อกบฏของทาสถูกปราบปราม"
- slaves_defected:0 "Free at Last"
- slaves_defected_desc:0 "The former slaves are pleased to be a part of our nation."
+ slaves_defected:0 "ในที่สุดก็เป็นอิสระ"
+ slaves_defected_desc:0 "บรรดาอดีตทาสต่างก็ยินดีที่ได้เป็นส่วนหนึ่งของเรา"
  revolt_suppressed_desc:0 "The slaves will not dare to reconsolidate anytime soon."
- free_at_last:0 "Free at Last"
+ free_at_last:0 "ในที่สุดก็เป็นอิสระ"
  free_at_last_desc:0 "The former slaves are finally free from their oppressors."
  insurgents_free:0 "$free_at_last$"
  insurgents_free_desc:0 "At last the rebels are free from the tyranny of the occupying power."
