--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -196,9 +196,9 @@
  joins_subject_wars_offensive_desc:1 "เจ้าเหนือหัวจะเข้าร่วมในสงครามรุกรานของบริวาร"
  joins_subject_wars_all_desc:1 "เจ้าเหนือหัวจะเข้าร่วมในสงครามทุกรูปแบบของบริวาร"
  subject_integration_desc:1 "ข้อกำหนดนี้กำหนดว่าเจ้าเหนือหัวสามารถรวมชาติกับจักรวรรดิบริวารหรือไม่"
- subject_can_be_integrated:2 "ให้บริวารเข้ามารวม"
+ subject_can_be_integrated:2 "ให้บริวารเข้ามาผนวกรวม"
  subject_can_be_integrated_desc:1 "จักรวรรดิเจ้าเหนือหัวสามารถรวมเข้ากับจักรวรรดิบริวารได้"
- subject_can_not_be_integrated:2 "ไม่ให้บริวารเข้ามารวม"
+ subject_can_not_be_integrated:2 "ไม่ให้บริวารเข้ามาผนวกรวม"
  subject_can_not_be_integrated_desc:1 "จักรวรรดิเจ้าเหนือหัวไม่สามารถรวมเข้ากับจักรวรรดิบริวารได้"
  subject_holdings_limit:0 "การถือครองบนดาวบริวาร"
  subject_holdings_limit_desc:1 "ข้อกำหนดนี้กำหนดจำนวนสิ่งปลูกสร้างทั้งหมดที่ถือครองโดยเจ้าเหนือหัวบนดาวเคราะห์ต่างๆของจักรวรรดิบริวาร"
@@ -582,7 +582,7 @@
  newly_released_sector_loyalty_desc:0 "Our gratitude to our founding Empire is still fresh in our minds."
  newly_subjugated_loyalty:0 "ความต้องการให้เป็นเมืองขึ้น/บริวาร"
  newly_subjugated_loyalty_desc:0 "Anger from being forced into servitude has not yet been forgotten."
- pledge_loyalty_1:0 "Pledge Loyalty"
+ pledge_loyalty_1:0 "คำมั่นสัญญาแห่งความจงรักภักดี"
  pledge_loyalty_2:0 "$pledge_loyalty_1$"
  overlord_shares_technology:0 "Overlord Tech Sharing"
  bulwark_prefabs_overlord:0 "บริวาร-ฐานที่มั่นอวกาศสำเร็จรูป"
@@ -1046,7 +1046,7 @@
  decision_strip_mining:0 "Strip Mining"
  decision_strip_mining_desc:0 "$d_prospectorium_strip_mine_desc$"
  decision_strip_mining_tt:0 "Remove a random §YAgricultural Feature§!."
- trade_action_pledge_loyalty:0 "Pledge Loyalty"
+ trade_action_pledge_loyalty:0 "คำมั่นสัญญาแห่งความจงรักภักดี"
  trade_action_pledge_loyalty_desc:0 "§LOf course a humble vassal wants to pledge loyalty to a noble overlord. It's a response to benevolence and enlightenment!§!"
  trade_action_share_empire_data:0 "Share Empire Data"
  trade_action_share_empire_data_desc:0 "§LReally, there's no need for vassals to keep secrets from their enlightened overlord. Nor should they be kept fully ignorant!§!"
