--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -305,9 +305,9 @@
  mod_planet_miners_engineering_research_produces_add:0 "£engineering_research£ $engineering_research$ จาก £job_miner£ [GetMinerPlural]"
  mod_planet_miners_volatile_motes_produces_add:0 "£volatile_motes£ $volatile_motes$ จาก £job_miner£ [GetMinerPlural]"
  mod_planet_miners_exotic_gases_produces_add: "£exotic_gases£ $exotic_gases$ จาก £job_miner£ [GetMinerPlural]"
- mod_job_scrap_miner_per_pop:0 "§G+1§! $job_scrap_miner$ Job per $VALUE$ Pops"
+ mod_job_scrap_miner_per_pop:0 "§G+1§! งาน $job_scrap_miner$ ต่อ $VALUE$ ประชากร"
  mod_job_scrap_miner_per_pop_short:0 "\n§G+1§! £job_scrap_miner£ per $VALUE$ £pop£"
- mod_job_scrap_miner_drone_per_pop:0 "§G+1§! $job_scrap_miner_drone$ Job per $VALUE$ Pops"
+ mod_job_scrap_miner_drone_per_pop:0 "§G+1§! งาน $job_scrap_miner_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_scrap_miner_drone_per_pop_short:0 "\n§G+1§! £job_scrap_miner£ per $VALUE$ £pop£"
  NAME_Astrocreator_Azaryn:0 "Astrocreator Azaryn"
  NAME_Astrocreator_Azaryn_plural:0 "Astrocreator Azaryn"
