--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -652,17 +652,17 @@
  factions.1.desc.totalitarian:0 "Their members have been pushing hard for an extreme centralization of political and military power.\n\n"
  factions.1.desc.traditionalist:0 "Their members support spiritualist and conservative values.\n\n"
  factions.1.desc.xenoist:0 "Their members have been pushing hard for friendly relations with alien species.\n\n"
- factions.2000.title:0 "Governing Ethics Shift in the [TargetFaction.Owner.GetName]"
- factions.2000.desc.start:0 "Following a long period of growing support for the §Y[TargetFaction.GetName]§!, the §Y[TargetFaction.Owner.GetName]§! has finally embraced the faction, adopting their core values and policies."
- factions.2000.desc.imperialist:0 "As a result of bringing this faction into their government, they have become more outwardly §HMilitaristic§!.\n\n"
- factions.2000.desc.isolationist:0 "As a result of bringing this faction into their government, they have become more outwardly §HXenophobic§!.\n\n"
- factions.2000.desc.progressive:0 "As a result of bringing this faction into their government, they have become more outwardly §HEgalitarian§!.\n\n"
- factions.2000.desc.prosperity:0 "As a result of bringing this faction into their government, they have become more outwardly §HPacifistic§!.\n\n"
- factions.2000.desc.supremacist:0 "As a result of bringing this faction into their government, they have become more outwardly §HXenophobic§!.\n\n"
- factions.2000.desc.technologist:0 "As a result of bringing this faction into their government, they have become more outwardly §HMaterialist§!.\n\n"
- factions.2000.desc.totalitarian:0 "As a result of bringing this faction into their government, they have become more outwardly §HAuthoritarian§!.\n\n"
- factions.2000.desc.traditionalist:0 "As a result of bringing this faction into their government, they have become more outwardly §HSpiritualist§!.\n\n"
- factions.2000.desc.xenoist:0 "As a result of bringing this faction into their government, they have become more outwardly §HXenophilic§!.\n\n"
+ factions.2000.title:0 "การเปลี่ยนแปลงจริยธรรมการปกครองภายใน [TargetFaction.Owner.GetName]"
+ factions.2000.desc.start:0 "ภายหลังจากช่วงเวลาอันยาวนานของการสนับสนุนที่เพิ่มขึ้นของ §Y[TargetFaction.GetName]§! ในที่สุด §Y[TargetFaction.Owner.GetName]§! ก็ยอมรับกลุ่มนี้โดยนำเอาค่านิยมและนโยบายหลักของตนมาใช้"
+ factions.2000.desc.imperialist:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความ §Hชอบสงคราม§! ที่มากขึ้น\n\n"
+ factions.2000.desc.isolationist:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความ §Hเกลียดต่างดาว§! ที่มากขึ้น\n\n"
+ factions.2000.desc.progressive:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึง §Hความเสมอภาค§! ที่มากขึ้น\n\n"
+ factions.2000.desc.prosperity:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความ §Hรักสันติ§! ที่มากขึ้น\n\n"
+ factions.2000.desc.supremacist:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความ §Hเกลียดต่างดาว§! ที่มากขึ้น\n\n"
+ factions.2000.desc.technologist:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความเป็น §Hวัตถุนิยม§! ที่มากขึ้น\n\n"
+ factions.2000.desc.totalitarian:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความเป็น §Hอำนาจเผด็จการ§! ที่มากขึ้น\n\n"
+ factions.2000.desc.traditionalist:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความเป็น §Hจิตวิญญาณนิยม§! ที่มากขึ้น\n\n"
+ factions.2000.desc.xenoist:0 "ผลจากการที่นำกลุ่มนี้เข้ามาในรัฐบาล จึงทำให้แสดงออกถึงความ §Hชอบต่างดาว§! ที่มากขึ้น\n\n"
  factions.3000.name:0 "The Political Frontier"
  factions.3000.desc:0 "Established Factions and fledgling movements alike have taken an unusually keen interest in our new colony on §Y[root.GetName]§!. From the moment we announced settlement of this modest [root.GetPlanetHabitat], nearly every political voice in the [root.owner.GetName] has had something to say about it.\n\nOur analysts don't suspect that anything truly radical is taking root on [root.GetName], but they advise some caution. It's clear our various political entities intend to campaign vigorously on this burgeoning world."
  factions.3000.a.demo:1 "Such vigorous debate is to be commended!"
