--- a/mod/thmod/localisation/english/toxoids_l_english.yml
+++ b/mod/thmod/localisation/english/toxoids_l_english.yml
@@ -25,7 +25,7 @@
  job_squire_desc:1 "Becoming a knight takes years of training. Those seeking admission into the Order must first serve a knight, learning from their example even as they strive to make their noble lives more comfortable."
  job_squire_effect_desc:2 "£job_squire£ $job_squire_plural$ provide $r_amenities$ and increase the §YOutput§! of £job_knight_commander£ §Y$job_knight_commander$§! and £job_knight£ §Y$job_knight$§! Jobs."
  mod_job_squire_add:0 "$job_squire$ Jobs"
- mod_job_squire_per_pop:0 "§G+1§! $job_squire$ Job per $VALUE$ Pops"
+ mod_job_squire_per_pop:0 "§G+1§! งาน $job_squire$ ต่อ $VALUE$ ประชากร"
  mod_job_squire_per_pop_short:0 "\n§G+1§! £mod_job_squire_add£ per $VALUE$ £pop£"
  mod_planet_squires_food_produces_add: "£food£ $food$ จาก £job_squire£ $job_squire_plural$"
  mod_planet_squires_exotic_gases_produces_add: "£exotic_gases£ $exotic_gases$ จาก £job_squire£ $job_squire_plural$"
@@ -37,7 +37,7 @@
  job_knight_commander_effect_desc:2 "£job_knight_commander£ $job_knight_commander_plural$ turn $r_alloys$ into $r_unity$ and $r_amenities$, and increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!.\nCompleting §YKnightly Quests§! can further improve their output."
  job_knight_commander_research_effect_desc:1 "£job_knight_commander£ $job_knight_commander_plural$ turn $r_alloys$ into $r_unity$, $r_research$, and $r_amenities$, and increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!.\nCompleting §YKnightly Quests§! can further improve their output."
  mod_job_knight_commander_add:0 "$job_knight_commander$ Jobs"
- mod_job_knight_commander_per_pop:0 "§G+1§! $job_knight_commander$ Job per $VALUE$ Pops"
+ mod_job_knight_commander_per_pop:0 "§G+1§! งาน $job_knight_commander$ ต่อ $VALUE$ ประชากร"
  mod_job_knight_commander_per_pop_short:0 "\n§G+1§! £mod_job_knight_commander_add£ per $VALUE$ £pop£"
  planet_squires:0 "Squires"
  district_orders_demesne:0 "Order's Demesne"
